k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youflix-backend-api
  namespace: youflix-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youflix-backend-api
  template:
    metadata:
      labels:
        app: youflix-backend-api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: api
          image: youflix-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
