k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youflix-backend-api
  namespace: youflix-backend
spec:
  selector: { app: youflix-backend-api }
  ports:
    - port: 80
      targetPort: 3000
