k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youflix-backend-ingress
  namespace: youflix-backend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  ingressClassName: nginx
  rules:
    - host: api.youflix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youflix-backend-api
                port:
                  number: 80
